--- a/form/02-article.html
+++ b/form/02-article.html
@@ -160,6 +160,7 @@
       <div class="form-group col-2-3"></div>
       <div class="form-group col-2-3"></div>
       <div class="form-group"></div>
+      <button type="submit" class="button button-primary">Post my comment</button>
     </fieldset>
        <!-- Form fields will go here -->
        </form>
