--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -160,15 +160,15 @@
             <div class="footer-widget">
               <h4>Newsletter</h4>
               <p>Stay updated with our latest trends</p>
-          <label for="email" class="visually-hidden">Email</label>
-        <div class="input-group">
-            <input type="email" id="email" name="email" autocomplete="email" required aria-required="true" class="form-control">
-            <div class="input-group-btn">
-                <button class="btn" type="submit">Validate</button>
-            </div>
-        </div>
-              </form>
-            </div>
+              <form action="#" method="post">
+                  <label for="email" class="visually-hidden">Email</label>
+                  <div class="input-group">
+                      <input type="email" id="email" name="email" autocomplete="email" required aria-required="true" class="form-control">
+                      <div class="input-group-btn">
+                          <button class="btn" type="submit">Validate</button>
+                      </div>
+                   </div>
+             </form>
           </div>
           <div class="col-2">
             <div class="footer-widget">
@@ -181,4 +181,5 @@
       </div>
     </div>
   </body>
-  </html>
+</html>
+  
