--- a/accessibility/fix-a11y/05-index.html
+++ b/accessibility/fix-a11y/05-index.html
@@ -163,6 +163,7 @@
               <form action="#" method="post">
                   <label for="email" class="visually-hidden">Email</label>
                   <div class="input-group">
+                    <label for="email" class="visually-hidden">Email</label>
                       <input type="email" id="email" name="email" autocomplete="email" required aria-required="true" class="form-control">
                       <div class="input-group-btn">
                           <button class="btn" type="submit">Validate</button>
